--- a/Kursova 927.ApiPlusAngular/ClientApp/src/app/app.component.html
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/app/app.component.html
@@ -1,5 +1,9 @@
 <body>
+  <div class="header">
+  <div class="menu-circle"></div>
   <nav-menu></nav-menu>
+</div>
+
   <div class="container">
     <router-outlet></router-outlet>
   </div>
