--- a/Kursova 927.ApiPlusAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
-<header>
-  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<header class="header-menu">
+  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-none  box-shadow mb-3">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">ApiPlusAngular</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
@@ -8,8 +8,8 @@
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end" [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+          <li class="nav-item header-menu" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link text-dark menu-link" [routerLink]="['/']">Home</a>
           </li>
 
           <li *ngIf="isAdmin===true && isManager === false" class="nav-item" [routerLinkActive]="['link-active']">
