--- a/Kursova 927.ApiPlusAngular/ClientApp/src/app/app.component.html
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/app/app.component.html
@@ -1,10 +1,10 @@
-<body>
+<body >
   <div class="header">
-  <div class="menu-circle"></div>
-  <nav-menu></nav-menu>
-</div>
+    <div class="menu-circle"></div>
+    <nav-menu></nav-menu>
+  </div>
 
-  <div class="container">
+  <div >
     <router-outlet></router-outlet>
   </div>
 </body>
