--- a/Kursova 927.ApiPlusAngular/ClientApp/src/app/test/test.component.html
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/app/test/test.component.html
@@ -25,7 +25,7 @@
 </div> -->
 </div>
 <div class="wrapper">
-<!-- <div class="left-side">
+ <div class="left-side">
  <div class="side-wrapper">
   <div class="side-title">Apps</div>
   <div class="side-menu">
@@ -142,7 +142,7 @@
    </a>
   </div>
  </div>
-</div> -->
+</div> 
 <div class="main-container">
  <div class="main-header">
   <a class="menu-link-main" href="#">All Apps</a>
