--- a/Kursova 927.ApiPlusAngular/ClientApp/src/styles.css
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/styles.css
@@ -68,13 +68,10 @@ html {
 body {
   font-family: var(--body-font);
   background-image: url(https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-5120x2880-1432.jpg);
-  background-size: cover;
-  background-position: center;
-  display: flex;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
-  padding: 2em;
   width: 100%;
   height: 100vh;
 }
@@ -150,7 +147,7 @@ body.light-mode:before {
   -webkit-backdrop-filter: blur(20px);
   font-size: 15px;
   font-weight: 500;
-}
+ }
 
 .header {
   display: flex;
