--- a/Kursova 927.ApiPlusAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,7 +17,7 @@
           </li>
           
           <li *ngIf="isManager===true" class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/manage-products']">Products</a>
+            <a class="nav-link text-dark" [routerLink]="['/products']">Products</a>
           </li>
 
 
