--- a/Kursova 927.ApiPlusAngular/ClientApp/src/app/products/products.component.html
+++ b/Kursova 927.ApiPlusAngular/ClientApp/src/app/products/products.component.html
@@ -18,7 +18,7 @@
                 <td>{{p?.name}}</td>
                 <td><i *ngIf="p?.isAviable" class="far fa-check-square"></i><i *ngIf="p?.isAviable" class="far fa-check-square"></i></td>
                 <td>{{p?.price}}</td>
-                <td>{{p?.count}}</td>
+                <td>{{p?.countt}}</td>
                 <td>
                     <button class="btn btn-sm btn-primary" (click)="editProduct(p)">Изменить</button>
                     <button class="btn btn-sm btn-danger" (click)="delete(p)">Удалить</button>
@@ -37,7 +37,7 @@
         <input type="number" [(ngModel)]="product.price" class="form-control" />
     </td>
     <td>
-        <input type="number" [(ngModel)]="product.count" class="form-control" />
+        <input type="number" [(ngModel)]="product.countt" class="form-control" />
     </td>
     <td>
         <input type="text" [(ngModel)]="product.image" class="form-control" />
@@ -56,7 +56,7 @@
     </div>
     <div class="form-group">
         <label>Кількість</label>
-        <input type="text" [(ngModel)]="product.count" class="form-control" />
+        <input type="text" [(ngModel)]="product.countt" class="form-control" />
     </div>
     <div class="form-group">
         <label>Цена</label>
